kubernetes/apps/umami/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: umami
  namespace: umami
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
      sectionName: https-internal-wildcard
  hostnames:
    - umami.${CLUSTER_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: umami
          port: 3000
